--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -4,6 +4,9 @@ group.entry.GROUP_C=Gruppe C
 group.entry.GROUP_D=Gruppe D
 group.entry.GROUP_E=Gruppe E
 group.entry.GROUP_F=Gruppe F
+group.entry.GROUP_G=Gruppe G
+group.entry.GROUP_H=Gruppe H
+group.entry.GROUP_I=Gruppe I
 group.entry.ROUND_OF_SIXTEEN=Achtelfinale
 group.entry.QUARTER_FINAL=Viertelfinale
 group.entry.SEMI_FINAL=Halbfinale
