--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -11,3 +11,7 @@ group.entry.ROUND_OF_SIXTEEN=Achtelfinale
 group.entry.QUARTER_FINAL=Viertelfinale
 group.entry.SEMI_FINAL=Halbfinale
 group.entry.FINAL=Finale
+all.matches=alle Spiele
+groups=Gruppen
+group=Gruppe
+finals=Finalrunden
