added upcoming matches

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -12,6 +12,7 @@ group.entry.QUARTER_FINAL=Viertelfinale
 group.entry.SEMI_FINAL=Halbfinale
 group.entry.FINAL=Finale
 all.matches=alle Spiele
+upcoming.matches=anstehende Spiele
 groups=Gruppen
 group=Gruppe
 finals=Finalrunden
