resolve message from msg bundle

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -16,3 +16,4 @@ upcoming.matches=anstehende Spiele
 groups=Gruppen
 group=Gruppe
 finals=Finalrunden
+msg.match.created.updated=Spiel {0} gegen {1} angelegt/aktualisiert!
