--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -17,3 +17,8 @@ groups=Gruppen
 group=Gruppe
 finals=Finalrunden
 msg.match.created.updated=Spiel {0} gegen {1} angelegt/aktualisiert!
+msg.negative.values.not.allowed=Negative Werte sind nicht erlaubt!
+msg.input.complete.result=Bitte geben Sie beide Tore an!
+msg.input.complete.date.time=Bitte geben Sie Datum und Uhrzeit ein!
+msg.input.teamOne.teamTwo=Bitte geben Sie den Namen für Team 1 und Team 2 ein!
+msg.input.stadium=Bitte geben Sie das Station ein!
