--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,24 +1,34 @@
-group.entry.GROUP_A=Gruppe A
-group.entry.GROUP_B=Gruppe B
-group.entry.GROUP_C=Gruppe C
-group.entry.GROUP_D=Gruppe D
-group.entry.GROUP_E=Gruppe E
-group.entry.GROUP_F=Gruppe F
-group.entry.GROUP_G=Gruppe G
-group.entry.GROUP_H=Gruppe H
-group.entry.GROUP_I=Gruppe I
-group.entry.ROUND_OF_SIXTEEN=Achtelfinale
-group.entry.QUARTER_FINAL=Viertelfinale
-group.entry.SEMI_FINAL=Halbfinale
-group.entry.FINAL=Finale
-all.matches=alle Spiele
-upcoming.matches=anstehende Spiele
-groups=Gruppen
-group=Gruppe
-finals=Finalrunden
-msg.match.created.updated=Spiel {0} gegen {1} angelegt/aktualisiert!
-msg.negative.values.not.allowed=Negative Werte sind nicht erlaubt!
-msg.input.complete.result=Bitte geben Sie beide Tore an!
-msg.input.complete.date.time=Bitte geben Sie Datum und Uhrzeit ein!
-msg.input.teamOne.teamTwo=Bitte geben Sie den Namen für Team 1 und Team 2 ein!
-msg.input.stadium=Bitte geben Sie das Station ein!
+
+all.matches = alle Spiele
+
+finals = Finalrunden
+
+group = Gruppe
+
+group.entry.FINAL            = Finale
+group.entry.GROUP_A          = Gruppe A
+group.entry.GROUP_B          = Gruppe B
+group.entry.GROUP_C          = Gruppe C
+group.entry.GROUP_D          = Gruppe D
+group.entry.GROUP_E          = Gruppe E
+group.entry.GROUP_F          = Gruppe F
+group.entry.GROUP_G          = Gruppe G
+group.entry.GROUP_H          = Gruppe H
+group.entry.GROUP_I          = Gruppe I
+group.entry.QUARTER_FINAL    = Viertelfinale
+group.entry.ROUND_OF_SIXTEEN = Achtelfinale
+group.entry.SEMI_FINAL       = Halbfinale
+
+groups = Gruppen
+
+msg.input.complete.date.time    = Bitte geben Sie Datum und Uhrzeit ein!
+msg.input.complete.result       = Bitte geben Sie beide Tore an!
+msg.input.stadium               = Bitte geben Sie das Station ein!
+msg.input.teamOne.teamTwo       = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
+msg.match.created.updated       = Spiel {0} gegen {1} angelegt/aktualisiert!
+msg.negative.values.not.allowed = Negative Werte sind nicht erlaubt!
+
+upcoming.matches = anstehende Spiele
+
+user.deleted       = Der Benutzer {0} wurde gel\u00F6scht!
+user.not.deletable = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
