removed deprevated added message title login

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -32,3 +32,5 @@ upcoming.matches = anstehende Spiele
 
 user.deleted       = Der Benutzer {0} wurde gel\u00F6scht!
 user.not.deletable = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+
+login.title = Fredbet - Login
