--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -34,3 +34,6 @@ user.deleted       = Der Benutzer {0} wurde gel\u00F6scht!
 user.not.deletable = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
 
 login.title = Fredbet - Login
+
+error.msg.unexpectedError=Es ist ein Fehler aufgetreten!
+error.title=Fehler
