--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,9 @@
 
 all.matches = alle Spiele
 
+error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
+error.title               = Fehler
+
 finals = Finalrunden
 
 group = Gruppe
@@ -21,6 +24,12 @@ group.entry.SEMI_FINAL       = Halbfinale
 
 groups = Gruppen
 
+login.button.login         = Anmelden
+login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
+login.placeholder.password = Passwort
+login.placeholder.username = Benutzername
+login.title                = Fredbet - Login
+
 msg.input.complete.date.time    = Bitte geben Sie Datum und Uhrzeit ein!
 msg.input.complete.result       = Bitte geben Sie beide Tore an!
 msg.input.stadium               = Bitte geben Sie das Station ein!
@@ -32,8 +41,3 @@ upcoming.matches = anstehende Spiele
 
 user.deleted       = Der Benutzer {0} wurde gel\u00F6scht!
 user.not.deletable = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
-
-login.title = Fredbet - Login
-
-error.msg.unexpectedError=Es ist ein Fehler aufgetreten!
-error.title=Fehler
