created demo data controller update

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,4 +1,6 @@
 
+administration.msg.info.demoDataCreated = Testdaten wurden erfolgreich angelegt!
+
 all.matches = alle Spiele
 
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
