added all EM 2016 matches, showing group

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -23,6 +23,16 @@ group.entry.GROUP_I          = Gruppe I
 group.entry.QUARTER_FINAL    = Viertelfinale
 group.entry.ROUND_OF_SIXTEEN = Achtelfinale
 group.entry.SEMI_FINAL       = Halbfinale
+group.title.A                = Gruppe A
+group.title.B                = Gruppe B
+group.title.C                = Gruppe C
+group.title.D                = Gruppe D
+group.title.E                = Gruppe E
+group.title.F                = Gruppe F
+group.title.final            = Finale
+group.title.quarterFinal     = Viertelfinale
+group.title.roundOfSixteen   = Achtelfinale
+group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
