added admin function to generate test bets

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,5 +1,6 @@
 
-administration.msg.info.demoDataCreated = Testdaten wurden erfolgreich angelegt!
+administration.msg.info.demoBetsCreated    = Test-Tipps wurden erfolgreich angelegt!
+administration.msg.info.demoMatchesCreated = Testspiele wurden erfolgreich angelegt!
 
 all.matches = alle Spiele
 
