added function to create test results

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,6 +1,7 @@
 
 administration.msg.info.demoBetsCreated    = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated = Testspiele wurden erfolgreich angelegt!
+administration.msg.info.demoResultsCreated = Testergebnisse erfolgreich erzeugt!
 
 all.matches = alle Spiele
 
