--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -49,7 +49,7 @@ msg.input.complete.result       = Bitte geben Sie beide Tore an!
 msg.input.stadium               = Bitte geben Sie das Station ein!
 msg.input.teamOne.teamTwo       = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
 msg.match.created               = Spiel {0} gegen {1} angelegt!
-msg.match.deleted               = Das Spiel mit der ID {0} wurde gel\u00F6scht!
+msg.match.deleted               = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
 msg.match.updated               = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed = Negative Werte sind nicht erlaubt!
 
