--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -44,14 +44,21 @@ login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
 login.title                = Fredbet - Login
 
-msg.input.complete.date.time    = Bitte geben Sie Datum und Uhrzeit ein!
-msg.input.complete.result       = Bitte geben Sie beide Tore an!
-msg.input.stadium               = Bitte geben Sie das Station ein!
-msg.input.teamOne.teamTwo       = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
-msg.match.created               = Spiel {0} gegen {1} angelegt!
-msg.match.deleted               = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
-msg.match.updated               = Spiel {0} gegen {1} aktualisiert!
-msg.negative.values.not.allowed = Negative Werte sind nicht erlaubt!
+msg.bet.betting.created                 = Tipp gespeichert!
+msg.bet.betting.error.empty             = Bitte geben Sie Ihren Tipp ein!
+msg.bet.betting.error.matchInProgress   = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
+msg.bet.betting.error.oldPasswordWrong  = Das alte Passwort ist falsch!
+msg.bet.betting.error.passwordMismatch  = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
+msg.bet.betting.info.allBetted          = Derzeit alle Spiele getippt!
+msg.input.complete.date.time            = Bitte geben Sie Datum und Uhrzeit ein!
+msg.input.complete.result               = Bitte geben Sie beide Tore an!
+msg.input.stadium                       = Bitte geben Sie das Station ein!
+msg.input.teamOne.teamTwo               = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
+msg.match.created                       = Spiel {0} gegen {1} angelegt!
+msg.match.deleted                       = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
+msg.match.updated                       = Spiel {0} gegen {1} aktualisiert!
+msg.negative.values.not.allowed         = Negative Werte sind nicht erlaubt!
+msg.user.profile.info.passwordChanged   = Passwort erfolgreich ge\u00E4ndert!
 
 upcoming.matches = anstehende Spiele
 
