--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,23 +44,36 @@ login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
 login.title                = Fredbet - Login
 
-msg.bet.betting.created                 = Tipp gespeichert!
-msg.bet.betting.error.empty             = Bitte geben Sie Ihren Tipp ein!
-msg.bet.betting.error.matchInProgress   = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
-msg.bet.betting.error.oldPasswordWrong  = Das alte Passwort ist falsch!
-msg.bet.betting.error.passwordMismatch  = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
-msg.bet.betting.info.allBetted          = Derzeit alle Spiele getippt!
-msg.input.complete.date.time            = Bitte geben Sie Datum und Uhrzeit ein!
-msg.input.complete.result               = Bitte geben Sie beide Tore an!
-msg.input.stadium                       = Bitte geben Sie das Station ein!
-msg.input.teamOne.teamTwo               = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
-msg.match.created                       = Spiel {0} gegen {1} angelegt!
-msg.match.deleted                       = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
-msg.match.updated                       = Spiel {0} gegen {1} aktualisiert!
-msg.negative.values.not.allowed         = Negative Werte sind nicht erlaubt!
-msg.user.profile.info.passwordChanged   = Passwort erfolgreich ge\u00E4ndert!
+msg.bet.betting.created                = Tipp gespeichert!
+msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
+msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
+msg.bet.betting.error.oldPasswordWrong = Das alte Passwort ist falsch!
+msg.bet.betting.error.passwordMismatch = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
+msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
+msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
+msg.input.complete.result              = Bitte geben Sie beide Tore an!
+msg.input.stadium                      = Bitte geben Sie das Station ein!
+msg.input.teamOne.teamTwo              = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
+msg.match.created                      = Spiel {0} gegen {1} angelegt!
+msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
+msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
+msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
+msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
+
+ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 upcoming.matches = anstehende Spiele
 
-user.deleted       = Der Benutzer {0} wurde gel\u00F6scht!
-user.not.deletable = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+user.changePassword.newPassword       = Bitte geben Sie das neue Passwort ein!
+user.changePassword.newPasswordRepeat = Bitte geben Sie die Passwortwiederholung ein!
+user.changePassword.oldPassword       = Bitte geben Sie das alte Passwort ein!
+user.created                          = Der Benutzer {0} wurde angelegt!
+user.deleted                          = Der Benutzer {0} wurde gel\u00F6scht!
+user.deleted.couldNotDeleteOwnUser    = Der eigene Benutzer kann nicht gel\u00F6scht werden!
+user.edited                           = Der Benutzer {0} wurde aktualisiert!
+user.edited.noRole                    = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+user.not.deletable                    = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+user.username.duplicate               = Dieser Benutzername ist bereits vergeben!
+user.validation.emptyUsername         = Bitte geben Sie einen Benutzernamen an!
+user.validation.password              = Bitte geben Sie ein Passwort an!
+user.validation.roles                 = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
