--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,87 @@
 
+administration.msg.info.demoBetsCreated    = Test bets created successfully!
+administration.msg.info.demoMatchesCreated = Test matches created successfully!
+administration.msg.info.demoResultsCreated = Test results created successfully!
+
+all.matches = All Matches
+
+error.msg.unexpectedError = Unexpected error occured!
+error.title               = Error
+
+finals = Final Matches
+
+group = Group
+
+group.entry.FINAL            = Final
+group.entry.GROUP_A          = Group A
+group.entry.GROUP_B          = Group B
+group.entry.GROUP_C          = Group C
+group.entry.GROUP_D          = Group D
+group.entry.GROUP_E          = Group E
+group.entry.GROUP_F          = Group F
+group.entry.GROUP_G          = Group G
+group.entry.GROUP_H          = Group H
+group.entry.GROUP_I          = Group I
+group.entry.QUARTER_FINAL    = Quarter Final
+group.entry.ROUND_OF_SIXTEEN = Round of Sixteen
+group.entry.SEMI_FINAL       = Semi Final
+group.title.A                = Group A
+group.title.B                = Group B
+group.title.C                = Group C
+group.title.D                = Group D
+group.title.E                = Group E
+group.title.F                = Group F
+group.title.final            = Final
+group.title.quarterFinal     = Quarter Final
+group.title.roundOfSixteen   = Round of Sixteen
+group.title.semiFinal        = Semi Final
+
+groups = Groups
+
+login.button.login         = Login
+login.msg.error            = Invalid username or password!
+login.placeholder.password = Password
+login.placeholder.username = Username
+login.title                = Fredbet - Login
+
+msg.bet.betting.created                = Bet saved!
+msg.bet.betting.error.empty            = Please enter a bet!
+msg.bet.betting.error.matchInProgress  = The match has already been started! No bets possible!
+msg.bet.betting.error.oldPasswordWrong = The old password is wrong!
+msg.bet.betting.error.passwordMismatch = The new password differs from password repeat!
+msg.bet.betting.info.allBetted         = All matches betted!
+msg.input.complete.date.time           = Please enter date and time!
+msg.input.complete.result              = Please enter both goals!
+msg.input.stadium                      = Please enter the stadium!
+msg.input.teamOne.teamTwo              = Please enter a name for team one and team two!
+msg.match.created                      = Match {0} vs. {1} created!
+msg.match.deleted                      = The match {0} vs {1} has been deleted!
+msg.match.updated                      = The match {0} vs {1} has been updated!
+msg.negative.values.not.allowed        = Negative values are not allowed!
+msg.user.profile.info.passwordChanged  = Password changed successfully!
+
+navigation.administration = Administration
+navigation.betting.open   = not betted yet
+navigation.buildInfo      = Build Info
+navigation.changePassword = Changed password!
+navigation.logout         = Logout
+navigation.ranking        = Ranking
+navigation.user           = User
+
+ranking.noRankings = No bets assigned!
+
 upcoming.matches = Upcoming Matches
 
+user.changePassword.newPassword       = Please enter a new password!
+user.changePassword.newPasswordRepeat = Please enter the password repeat!
+user.changePassword.oldPassword       = Please enter the old password!
+user.created                          = The user {0} has been deleted!
 user.deleted                          = The user {0} has been deleted!
+user.deleted.couldNotDeleteOwnUser    = The own user could not be deleted!
+user.edited                           = The user {0} has been updated!
+user.edited.noRole                    = Please choose at least one of these roles!
+user.not.deletable                    = The user with name {0} is not deletable!
+user.username.duplicate               = The entered username is already assigned!
+user.validation.emptyUsername         = Please enter a username!
+user.validation.password              = Please enter a password!
+user.validation.roles                 = Please choose one of the given roles!
