--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -60,6 +60,14 @@ msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
 
+navigation.administration = Administration
+navigation.betting.open   = noch zu tippen
+navigation.buildInfo      = Build Info
+navigation.changePassword = Passwort \u00E4ndern
+navigation.logout         = Abmelden
+navigation.ranking        = Ranking
+navigation.user           = Benutzer
+
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 upcoming.matches = anstehende Spiele
