--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ country.hu           = Ungarn
 country.ie           = Irland
 country.is           = Island
 country.it           = Italien
+country.none         = -- Bitte w\u00E4hlen --
 country.north_irland = Nordirland
 country.pl           = Polen
 country.pt           = Portugal
