--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,6 +19,7 @@ country.hu           = Hungary
 country.ie           = Ireland
 country.is           = Iceland
 country.it           = Italy
+country.none         = -- Please select --
 country.north_irland = North Ireland
 country.pl           = Poland
 country.pt           = Portugal
