--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,6 +79,7 @@ msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
 msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
 msg.input.complete.result              = Bitte geben Sie beide Tore an!
 msg.input.countries.and.teamNames      = Nur Landesauswahl oder Teamnamen erlaubt!
+msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
 msg.input.stadium                      = Bitte geben Sie das Station ein!
 msg.input.teamOne.teamTwo              = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
 msg.match.created                      = Spiel {0} gegen {1} angelegt!
