--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,6 +92,7 @@ navigation.administration = Administration
 navigation.betting.open   = noch zu tippen
 navigation.buildInfo      = Build Info
 navigation.changePassword = Passwort \u00E4ndern
+navigation.dataCreation   = Datenanlage
 navigation.logout         = Abmelden
 navigation.ranking        = Ranking
 navigation.user           = Benutzer
