--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -90,6 +90,7 @@ navigation.administration = Administration
 navigation.betting.open   = not betted yet
 navigation.buildInfo      = Build Info
 navigation.changePassword = Changed password!
+navigation.dataCreation   = Create data
 navigation.logout         = Logout
 navigation.ranking        = Ranking
 navigation.user           = User
