--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ country.cz           = Tschechien
 country.de           = Deutschland
 country.en           = England
 country.es           = Spanien
-country.fr           = Frankfreich
+country.fr           = Frankreich
 country.hr           = Kroatien
 country.hu           = Ungarn
 country.ie           = Irland
