--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,11 @@
 
+administration.createEmMatches             = EM 2016 Gruppenspiele anlegen
+administration.demoBetsAllUsers            = Testtipps f\u00FCr alle Benutzer anlegen
 administration.msg.info.demoBetsCreated    = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated = Testspiele wurden erfolgreich angelegt!
 administration.msg.info.demoResultsCreated = Testergebnisse erfolgreich erzeugt!
+administration.testResultsAllUsers         = Testergebnisse f\u00FCr alle Benutzer erzeugen
+administration.title                       = Administration
 
 all.matches = alle Spiele
 
