--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,15 @@ administration.title                       = Administration
 
 all.matches = alle Spiele
 
+bet.edit.title     = Spieltipp
+bet.list.betted    = getippt
+bet.list.points    = Punkte
+bet.list.title     = Meine Spieletipps
+bet.listOpen.title = Noch nicht getippt
+
+button.cancel = Abbrechen
+button.save   = Speichern
+
 country.al           = Albanien
 country.at           = \u00D6sterreich
 country.be           = Belgien
