--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,8 +14,11 @@ bet.list.betted    = getippt
 bet.list.points    = Punkte
 bet.list.title     = Meine Spieletipps
 bet.listOpen.title = Noch nicht getippt
+bet.others.title   = Tipps der anderen...
 
+button.back   = zur\u00FCck
 button.cancel = Abbrechen
+button.delete = L\u00F6schen
 button.save   = Speichern
 
 country.al           = Albanien
@@ -82,6 +85,14 @@ login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
 login.title                = Fredbet - Login
+
+matches.form.chooseCountry = L\u00E4nderauswahl
+matches.form.group         = Gruppe
+matches.form.kickOff       = Ansto\u00DF
+matches.form.result        = Ergebnis
+matches.form.stadium       = Stadion
+matches.form.teamNames     = oder Teamnamen
+matches.form.title         = Spiel editieren
 
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
