--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,6 +70,8 @@ login.placeholder.password = Password
 login.placeholder.username = Username
 login.title                = Fredbet - Login
 
+matches.form.title         = Matches
+
 msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.empty            = Please enter a bet!
 msg.bet.betting.error.matchInProgress  = The match has already been started! No bets possible!
