--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,13 @@ matches.form.result        = Ergebnis
 matches.form.stadium       = Stadion
 matches.form.teamNames     = oder Teamnamen
 matches.form.title         = Spiel editieren
+matches.list.betMatch      = Spiel tippen
+matches.list.betted        = getippt
+matches.list.createMatch   = Spiel anlegen
+matches.list.editMatch     = Spiel \u00E4ndern
+matches.list.enterResult   = Ergebnis eingeben
+matches.list.result        = Ergebnis
+matches.matchresult.title  = Matchergebnis editieren
 
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
@@ -121,6 +128,8 @@ navigation.logout         = Abmelden
 navigation.ranking        = Ranking
 navigation.user           = Benutzer
 
+ranking.list.order = Platz
+ranking.list.title = Ranking
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 upcoming.matches = anstehende Spiele
