--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -134,16 +134,29 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 upcoming.matches = anstehende Spiele
 
-user.changePassword.newPassword       = Bitte geben Sie das neue Passwort ein!
-user.changePassword.newPasswordRepeat = Bitte geben Sie die Passwortwiederholung ein!
-user.changePassword.oldPassword       = Bitte geben Sie das alte Passwort ein!
-user.created                          = Der Benutzer {0} wurde angelegt!
-user.deleted                          = Der Benutzer {0} wurde gel\u00F6scht!
-user.deleted.couldNotDeleteOwnUser    = Der eigene Benutzer kann nicht gel\u00F6scht werden!
-user.edited                           = Der Benutzer {0} wurde aktualisiert!
-user.edited.noRole                    = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
-user.not.deletable                    = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
-user.username.duplicate               = Dieser Benutzername ist bereits vergeben!
-user.validation.emptyUsername         = Bitte geben Sie einen Benutzernamen an!
-user.validation.password              = Bitte geben Sie ein Passwort an!
-user.validation.roles                 = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+user.changePassword.newPassword              = Bitte geben Sie das neue Passwort ein!
+user.changePassword.newPasswordRepeat        = Bitte geben Sie die Passwortwiederholung ein!
+user.changePassword.oldPassword              = Bitte geben Sie das alte Passwort ein!
+user.create.password                         = Passwort
+user.create.title                            = Benutzer anlegen
+user.create.username                         = Benutzername
+user.created                                 = Der Benutzer {0} wurde angelegt!
+user.deleted                                 = Der Benutzer {0} wurde gel\u00F6scht!
+user.deleted.couldNotDeleteOwnUser           = Der eigene Benutzer kann nicht gel\u00F6scht werden!
+user.edit.passwordReset                      = Passwort zur\u00FCcksetzen
+user.edit.title                              = Benutzer bearbeiten
+user.edit.username                           = Benutzername
+user.edited                                  = Der Benutzer {0} wurde aktualisiert!
+user.edited.noRole                           = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+user.list.createUser                         = Benutzer anlegen
+user.list.title                              = Benutzer
+user.not.deletable                           = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+user.username.duplicate                      = Dieser Benutzername ist bereits vergeben!
+user.validation.emptyUsername                = Bitte geben Sie einen Benutzernamen an!
+user.validation.password                     = Bitte geben Sie ein Passwort an!
+user.validation.roles                        = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+
+userprofile.changePassword.newPassword       = neues Passwort
+userprofile.changePassword.newPasswordRepeat = neues Passwort wiederholen
+userprofile.changePassword.oldPassword       = altes Passwort
+userprofile.changePassword.title             = Passwort \u00E4ndern
