--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,8 @@ bet.list.title     = Meine Spieletipps
 bet.listOpen.title = Noch nicht getippt
 bet.others.title   = Tipps der anderen...
 
+buildinfo.title = Build Info
+
 button.back   = zur\u00FCck
 button.cancel = Abbrechen
 button.delete = L\u00F6schen
@@ -84,7 +86,8 @@ login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
-login.title                = Fredbet - Login
+login.title                = Fredbet - Anmelden
+login.title.short          = Anmelden
 
 matches.form.chooseCountry = L\u00E4nderauswahl
 matches.form.group         = Gruppe
