--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,9 +1,27 @@
 
+administration.createEmMatches             = create matches of EM 2016
+administration.demoBetsAllUsers            = create demo bets for all users
 administration.msg.info.demoBetsCreated    = Test bets created successfully!
 administration.msg.info.demoMatchesCreated = Test matches created successfully!
 administration.msg.info.demoResultsCreated = Test results created successfully!
+administration.testResultsAllUsers         = create demo results for all users
+administration.title                       = Administration
 
 all.matches = All Matches
+
+bet.edit.title     = match bet
+bet.list.betted    = betted
+bet.list.points    = points
+bet.list.title     = My bettings
+bet.listOpen.title = matches to bet
+bet.others.title   = bets of the others...
+
+buildinfo.title = Build Info
+
+button.back   = back
+button.cancel = cancel
+button.delete = delete
+button.save   = save
 
 country.al           = Albania
 country.at           = Austria
@@ -69,8 +87,22 @@ login.msg.error            = Invalid username or password!
 login.placeholder.password = Password
 login.placeholder.username = Username
 login.title                = Fredbet - Login
+login.title.short          = Login
 
-matches.form.title        = Matches
+matches.form.chooseCountry = Country selection
+matches.form.group         = group
+matches.form.kickOff       = Kick-Off
+matches.form.result        = result
+matches.form.stadium       = stadium
+matches.form.teamNames     = or team names
+matches.form.title         = Matches
+matches.list.betMatch      = bet a match
+matches.list.betted        = betted
+matches.list.createMatch   = create match
+matches.list.editMatch     = edit match
+matches.list.enterResult   = enter result
+matches.list.result        = result
+matches.matchresult.title  = enter match result
 
 msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.empty            = Please enter a bet!
@@ -80,6 +112,8 @@ msg.bet.betting.error.passwordMismatch = The new password differs from password 
 msg.bet.betting.info.allBetted         = All matches betted!
 msg.input.complete.date.time           = Please enter date and time!
 msg.input.complete.result              = Please enter both goals!
+msg.input.countries.and.teamNames      = Only country or team names allowed!
+msg.input.same.teams                   = A team cannot play against itself!
 msg.input.stadium                      = Please enter the stadium!
 msg.input.teamOne.teamTwo              = Please enter a name for team one and team two!
 msg.match.created                      = Match {0} vs. {1} created!
@@ -97,6 +131,8 @@ navigation.logout         = Logout
 navigation.ranking        = Ranking
 navigation.user           = User
 
+ranking.list.order = Ranking
+ranking.list.title = Ranking
 ranking.noRankings = No bets assigned!
 
 upcoming.matches = Upcoming Matches
@@ -104,13 +140,26 @@ upcoming.matches = Upcoming Matches
 user.changePassword.newPassword              = Please enter a new password!
 user.changePassword.newPasswordRepeat        = Please enter the password repeat!
 user.changePassword.oldPassword              = Please enter the old password!
+user.create.password                         = password
+user.create.title                            = Create user
+user.create.username                         = username
 user.created                                 = The user {0} has been deleted!
 user.deleted                                 = The user {0} has been deleted!
 user.deleted.couldNotDeleteOwnUser           = The own user could not be deleted!
+user.edit.passwordReset                      = Password reset
+user.edit.title                              = edit user
+user.edit.username                           = username
 user.edited                                  = The user {0} has been updated!
 user.edited.noRole                           = Please choose at least one of these roles!
+user.list.createUser                         = create user
+user.list.title                              = user
 user.not.deletable                           = The user with name {0} is not deletable!
 user.username.duplicate                      = The entered username is already assigned!
 user.validation.emptyUsername                = Please enter a username!
 user.validation.password                     = Please enter a password!
 user.validation.roles                        = Please choose one of the given roles!
+
+userprofile.changePassword.newPassword       = new password
+userprofile.changePassword.newPasswordRepeat = new password repeat
+userprofile.changePassword.oldPassword       = old password
+userprofile.changePassword.title             = change password
