implemented extra bets

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,6 +52,10 @@ country.wales        = Wales
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
+extra_bets.finalWinner     = Europameister
+extra_bets.semiFinalWinner = Fize-Europameister
+extra_bets.title           = Europameister und Fize-Europameister tippen
+
 finals = Finalrunden
 
 group = Gruppe
