--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -122,14 +122,15 @@ msg.match.updated                      = The match {0} vs {1} has been updated!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
 
-navigation.administration = Administration
-navigation.betting.open   = not betted yet
-navigation.buildInfo      = Build Info
-navigation.changePassword = Changed password!
-navigation.dataCreation   = Create data
-navigation.logout         = Logout
-navigation.ranking        = Ranking
-navigation.user           = User
+navigation.administration    = Administration
+navigation.betting           = Betting
+navigation.betting.open      = not betted yet
+navigation.buildInfo         = Build Info
+navigation.changePassword    = Changed password!
+navigation.dataCreation      = Create data
+navigation.logout            = Logout
+navigation.ranking           = Ranking
+navigation.user              = User
 
 ranking.list.order = Ranking
 ranking.list.title = Ranking
