--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,8 @@ error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
 extra_bets.finalWinner     = Europameister
+extra_bets.points          = erreichte Punkte
+extra_bets.reachablePoints = m\u00F6gliche Punktzahl
 extra_bets.semiFinalWinner = Vize-Europameister
 extra_bets.title           = Europameister und Fize-Europameister tippen
 
