--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,8 +53,9 @@ error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
 extra_bets.finalWinner     = Europameister
-extra_bets.points          = erreichte Punkte
+extra_bets.points          = {0} Punkte
 extra_bets.reachablePoints = m\u00F6gliche Punktzahl
+extra_bets.reachedPoints   = erzielte Punkte
 extra_bets.semiFinalWinner = Vize-Europameister
 extra_bets.title           = Europameister und Fize-Europameister tippen
 
