--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -52,6 +52,8 @@ country.wales        = Wales
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
+extra_bets.reachedPoints = reached points
+
 finals = Final Matches
 
 group = Group
