--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,7 +57,7 @@ extra_bets.points          = {0} Punkte
 extra_bets.reachablePoints = m\u00F6gliche Punktzahl
 extra_bets.reachedPoints   = erzielte Punkte
 extra_bets.semiFinalWinner = Vize-Europameister
-extra_bets.title           = Europameister und Fize-Europameister tippen
+extra_bets.title           = Europameister und Vize-Europameister tippen
 
 finals = Finalrunden
 
