--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -52,7 +52,12 @@ country.wales        = Wales
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
-extra_bets.reachedPoints = reached points
+extra_bets.finalWinner     = European champion
+extra_bets.points          = {0} points
+extra_bets.reachablePoints = reachable points
+extra_bets.reachedPoints   = reached points
+extra_bets.semiFinalWinner = vice-European champion
+extra_bets.title           = betting European champion and vice-European champion
 
 finals = Final Matches
 
