added warn message if bonus bet is stil pending

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -117,6 +117,7 @@ msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine T
 msg.bet.betting.error.oldPasswordWrong = Das alte Passwort ist falsch!
 msg.bet.betting.error.passwordMismatch = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
 msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
+msg.bet.betting.warn.extraBetOpen      = Du hast deinen Bonus-Tipp noch nicht abgegeben!
 msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
 msg.input.complete.result              = Bitte geben Sie beide Tore an!
 msg.input.countries.and.teamNames      = Nur Landesauswahl oder Teamnamen erlaubt!
