--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -117,6 +117,7 @@ msg.bet.betting.error.matchInProgress  = The match has already been started! No 
 msg.bet.betting.error.oldPasswordWrong = The old password is wrong!
 msg.bet.betting.error.passwordMismatch = The new password differs from password repeat!
 msg.bet.betting.info.allBetted         = All matches betted!
+msg.bet.betting.warn.extraBetOpen      = Your bonus betting is still pending!
 msg.input.complete.date.time           = Please enter date and time!
 msg.input.complete.result              = Please enter both goals!
 msg.input.countries.and.teamNames      = Only country or team names allowed!
