--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ administration.title                       = Administration
 
 all.matches = alle Spiele
 
+bet.edit.heading   = Tipp abgeben
 bet.edit.title     = Spieltipp
 bet.list.betted    = getippt
 bet.list.points    = Punkte
@@ -110,6 +111,8 @@ matches.list.editMatch     = Spiel \u00E4ndern
 matches.list.enterResult   = Ergebnis eingeben
 matches.list.result        = Ergebnis
 matches.matchresult.title  = Matchergebnis editieren
+
+matchresult.heading = Ergebnis eintragen
 
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
