--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,7 @@ administration.title                       = Administration
 
 all.matches = All Matches
 
+bet.edit.heading   = Enter bet
 bet.edit.title     = match bet
 bet.list.betted    = betted
 bet.list.points    = points
@@ -110,6 +111,8 @@ matches.list.editMatch     = edit match
 matches.list.enterResult   = enter result
 matches.list.result        = result
 matches.matchresult.title  = enter match result
+
+matchresult.heading = Enter result
 
 msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.empty            = Please enter a bet!
