added translations for user roles

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -114,6 +114,10 @@ matches.matchresult.title  = Matchergebnis editieren
 
 matchresult.heading = Ergebnis eintragen
 
+msg.ROLE_ADMIN                         = Admin Benutzer
+msg.ROLE_USER                          = normaler Benutzer
+msg.ROLE_USER_ENTER_RESULTS            = n. B. mit Eingabe Ergebnisse
+msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = n. B. mit Eingabe Ergeb. und Benutzeradm.
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
 msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
