--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -114,6 +114,10 @@ matches.matchresult.title  = enter match result
 
 matchresult.heading = Enter result
 
+msg.ROLE_ADMIN                         = Admin user
+msg.ROLE_USER                          = standard user
+msg.ROLE_USER_ENTER_RESULTS            = standard user with entering results
+msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = standard user entering results, user adm.
 msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.empty            = Please enter a bet!
 msg.bet.betting.error.matchInProgress  = The match has already been started! No bets possible!
