--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -148,6 +148,8 @@ navigation.logout            = Abmelden
 navigation.ranking           = Ranking
 navigation.user              = Benutzer
 
+penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
+
 ranking.list.order = Platz
 ranking.list.title = Ranking
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
