added rules page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -144,6 +144,7 @@ navigation.betting.open      = noch zu tippen
 navigation.buildInfo         = Build Info
 navigation.changePassword    = Passwort \u00E4ndern
 navigation.dataCreation      = Datenanlage
+navigation.info              = Infos
 navigation.logout            = Abmelden
 navigation.ranking           = Ranking
 navigation.user              = Benutzer
@@ -153,6 +154,8 @@ penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 ranking.list.order = Platz
 ranking.list.title = Ranking
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
+
+rules.title = Regeln
 
 upcoming.matches = anstehende Spiele
 
