added prices page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -151,6 +151,8 @@ navigation.user              = Benutzer
 
 penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 
+prices.title = Preise
+
 ranking.list.order = Platz
 ranking.list.title = Ranking
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
