--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -144,15 +144,20 @@ navigation.betting.open      = not betted yet
 navigation.buildInfo         = Build Info
 navigation.changePassword    = Changed password!
 navigation.dataCreation      = Create data
+navigation.info              = Info
 navigation.logout            = Logout
 navigation.ranking           = Ranking
 navigation.user              = User
 
 penalty.box.heading = Winner after penalty shot
 
+prices.title = Prices
+
 ranking.list.order = Ranking
 ranking.list.title = Ranking
 ranking.noRankings = No bets assigned!
+
+rules.title = Rules
 
 upcoming.matches = Upcoming Matches
 
