--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,6 +90,9 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
+info.edit.title        = Info editieren
+info.rules.edit.button = Regeln editieren
+
 login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
