--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,8 +90,10 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
-info.edit.title        = Info editieren
-info.rules.edit.button = Regeln editieren
+info.edit.title         = Info editieren
+info.msg.edit.saved     = Infos editiert!
+info.prices.edit.button = Preise editieren
+info.rules.edit.button  = Regeln editieren
 
 login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
