--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -90,6 +90,11 @@ group.title.semiFinal        = Semi Final
 
 groups = Groups
 
+info.edit.title         = edit info
+info.msg.edit.saved     = infos edited!
+info.prices.edit.button = edit winnings
+info.rules.edit.button  = edit rules
+
 login.button.login         = Login
 login.msg.error            = Invalid username or password!
 login.placeholder.password = Password
