show active users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 
+active.users.title = aktuell angemeldete Benutzer
+
 administration.createEmMatches             = EM 2016 Gruppenspiele anlegen
 administration.demoBetsAllUsers            = Testtipps f\u00FCr alle Benutzer anlegen
 administration.msg.info.demoBetsCreated    = Test-Tipps wurden erfolgreich angelegt!
@@ -142,6 +144,7 @@ msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
 
+navigation.activeUserList    = angemeldete Benutzer
 navigation.administration    = Administration
 navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
