show last login

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,8 @@ administration.title                       = Administration
 
 all.matches = All Matches
 
+app.dateformat = EEE dd MMMM yyyy HH:mm
+
 bet.edit.heading   = Enter bet
 bet.edit.title     = match bet
 bet.list.betted    = betted
