--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,8 @@ administration.title                       = Administration
 
 all.matches = alle Spiele
 
+app.dateformat = EEE dd. MMMM yyyy HH:mm
+
 bet.edit.heading   = Tipp abgeben
 bet.edit.title     = Spieltipp
 bet.list.betted    = getippt
