--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,11 +1,13 @@
 
-administration.createEmMatches             = create matches of EM 2016
-administration.demoBetsAllUsers            = create demo bets for all users
-administration.msg.info.demoBetsCreated    = Test bets created successfully!
-administration.msg.info.demoMatchesCreated = Test matches created successfully!
-administration.msg.info.demoResultsCreated = Test results created successfully!
-administration.testResultsAllUsers         = create demo results for all users
-administration.title                       = Administration
+administration.createEmMatches               = create matches of EM 2016
+administration.demoBetsAllUsers              = create demo bets for all users
+administration.msg.info.deleteOldActiveUsers = Active users with login date older than 30 minutes has been deleted!
+administration.msg.info.demoBetsCreated      = Test bets created successfully!
+administration.msg.info.demoMatchesCreated   = Test matches created successfully!
+administration.msg.info.demoResultsCreated   = Test results created successfully!
+administration.purgeOldActiveUsers           = purge older than 30 min
+administration.testResultsAllUsers           = create demo results for all users
+administration.title                         = Administration
 
 all.matches = All Matches
 
